@@ -23,10 +23,7 @@ public abstract class QualifierHierarchy {
      *
      * @return whether the instance is valid
      */
-    public boolean isValid() {
-        // For most QH the simplest check is that there are qualifiers.
-        return !getTypeQualifiers().isEmpty();
-    }
+    public abstract boolean isValid();
 
     // **********************************************************************
     // Getter methods about this hierarchy
@@ -75,16 +72,6 @@ public abstract class QualifierHierarchy {
      *     polymorphic qualifier in that hierarchy
      */
     public abstract AnnotationMirror getPolymorphicAnnotation(AnnotationMirror start);
-
-    /**
-     * Returns all type qualifiers in this type qualifier hierarchy.
-     *
-     * @return the fully qualified name represented in this hierarchy
-     * @deprecated use {@link AnnotatedTypeFactory#getSupportedTypeQualifierNames()} or {@link
-     *     AnnotatedTypeFactory#getSupportedTypeQualifiers()} instead
-     */
-    @Deprecated
-    public abstract Set<? extends AnnotationMirror> getTypeQualifiers();
 
     // **********************************************************************
     // Qualifier Hierarchy Queries
